# KiCad_PersoLibrary

./: .gitignore  README.md
kicad-packages3D-master/: .gitignore  CMakeLists.txt  README.md
kicad-packages3D-master/Battery.3dshapes/: BatteryHolder_Multicomp_BC-2001_1x2032.step  BatteryHolder_Multicomp_BC-2001_1x2032.wrl
kicad-packages3D-master/Button_Switch_SMD.3dshapes/: Nidec_Copal_SH-7010A.step  Nidec_Copal_SH-7010A.wrl  Nidec_Copal_SH-7010B.step  Nidec_Copal_SH-7010B.wrl  Nidec_Copal_SH-7040B.step  Nidec_Copal_SH-7040B.wrl  Panasonic_EVQPUJ_EVQPUA.step  Panasonic_EVQPUK_EVQPUB.step  Panasonic_EVQPUL_EVQPUC.step  Panasonic_EVQPUM_EVQPUD.step  SW_DIP_SPSTx01_Slide_6.7x4.1mm_W6.73mm_P2.54mm_LowProfile_JPin.step  SW_DIP_SPSTx01_Slide_6.7x4.1mm_W8.61mm_P2.54mm_LowProfile.step  SW_DIP_SPSTx01_Slide_9.78x4.72mm_W8.61mm_P2.54mm.step  SW_DIP_SPSTx01_Slide_Copal_CHS-01A_W5.08mm_P1.27mm_JPin.step  SW_DIP_SPSTx01_Slide_Copal_CHS-01B_W7.62mm_P1.27mm.step  SW_DIP_SPSTx01_Slide_Copal_CVS-01xB_W5.9mm_P1mm.step  SW_DIP_SPSTx01_Slide_Omron_A6S-110x_W8.9mm_P2.54mm.step  SW_DIP_SPSTx02_Slide_6.7x6.64mm_W8.61mm_P2.54mm_LowProfile.step  SW_DIP_SPSTx02_Slide_9.78x7.26mm_W8.61mm_P2.54mm.step  SW_DIP_SPSTx02_Slide_Copal_CHS-02A_W5.08mm_P1.27mm_JPin.step  SW_DIP_SPSTx02_Slide_Copal_CHS-02B_W7.62mm_P1.27mm.step  SW_DIP_SPSTx02_Slide_Copal_CVS-02xB_W5.9mm_P1mm.step  SW_DIP_SPSTx02_Slide_KingTek_DSHP02TJ_W5.25mm_P1.27mm_JPin.step  SW_DIP_SPSTx02_Slide_KingTek_DSHP02TS_W7.62mm_P1.27mm.step  SW_DIP_SPSTx02_Slide_Omron_A6H-2101_W6.15mm_P1.27mm.step  SW_DIP_SPSTx03_Slide_6.7x9.18mm_W6.73mm_P2.54mm_LowProfile_JPin.step  SW_DIP_SPSTx03_Slide_9.78x9.8mm_W8.61mm_P2.54mm.step  SW_DIP_SPSTx03_Slide_Copal_CVS-03xB_W5.9mm_P1mm.step  SW_DIP_SPSTx03_Slide_KingTek_DSHP03TJ_W5.25mm_P1.27mm_JPin.step  SW_DIP_SPSTx03_Slide_KingTek_DSHP03TS_W7.62mm_P1.27mm.step  SW_DIP_SPSTx03_Slide_Omron_A6S-310x_W8.9mm_P2.54mm.step  SW_DIP_SPSTx04_Slide_6.7x11.72mm_W6.73mm_P2.54mm_LowProfile_JPin.step  SW_DIP_SPSTx04_Slide_6.7x11.72mm_W8.61mm_P2.54mm_LowProfile.step  SW_DIP_SPSTx04_Slide_9.78x12.34mm_W8.61mm_P2.54mm.step  SW_DIP_SPSTx04_Slide_Copal_CHS-04A_W5.08mm_P1.27mm_JPin.step  SW_DIP_SPSTx04_Slide_Copal_CHS-04B_W7.62mm_P1.27mm.step  SW_DIP_SPSTx04_Slide_Copal_CVS-04xB_W5.9mm_P1mm.step  SW_DIP_SPSTx04_Slide_KingTek_DSHP04TJ_W5.25mm_P1.27mm_JPin.step  SW_DIP_SPSTx04_Slide_KingTek_DSHP04TS_W7.62mm_P1.27mm.step  SW_DIP_SPSTx04_Slide_Omron_A6H-4101_W6.15mm_P1.27mm.step  (+105 more)
kicad-packages3D-master/Button_Switch_THT.3dshapes/: Nidec_Copal_SH-7010C.step  Nidec_Copal_SH-7010C.wrl  SW_DIP_SPSTx01_Piano_10.8x4.1mm_W7.62mm_P2.54mm.step  SW_DIP_SPSTx01_Slide_6.7x4.1mm_W7.62mm_P2.54mm_LowProfile.step  SW_DIP_SPSTx01_Slide_9.78x4.72mm_W7.62mm_P2.54mm.step  SW_DIP_SPSTx02_Piano_10.8x6.64mm_W7.62mm_P2.54mm.step  SW_DIP_SPSTx02_Piano_CTS_Series194-2MSTN_W7.62mm_P2.54mm.step  SW_DIP_SPSTx03_Piano_10.8x9.18mm_W7.62mm_P2.54mm.step  SW_DIP_SPSTx03_Piano_CTS_Series194-3MSTN_W7.62mm_P2.54mm.step  SW_DIP_SPSTx03_Slide_6.7x9.18mm_W7.62mm_P2.54mm_LowProfile.step  SW_DIP_SPSTx03_Slide_9.78x9.8mm_W7.62mm_P2.54mm.step  SW_DIP_SPSTx04_Piano_10.8x11.72mm_W7.62mm_P2.54mm.step  SW_DIP_SPSTx04_Piano_CTS_Series194-4MSTN_W7.62mm_P2.54mm.step  SW_DIP_SPSTx04_Slide_6.7x11.72mm_W7.62mm_P2.54mm_LowProfile.step  (+44 more)
(+18833 files in other folders)
